# ilko

./: .gitignore  .gitmodules  ContentView.swift  LiveWallpaper.mm  LiveWallpaperApp.swift  LocationWatcher.swift  Makefile  MenuBarController.swift  ProfileManager.swift  ProfilesView.swift  README.md  README.zh-Hans.md  SettingsView.swift  SwitchController.swift  ThumbnailCache.swift  VideoGridView.swift  WallpaperEngine.h  WallpaperEngine.mm  WallpaperViewModel.swift
.github/workflows/: linux-ci.yml  release.yml
LiveWallpaper.xcodeproj/: project.pbxproj
LiveWallpaper.xcodeproj/project.xcworkspace/xcuserdata/mac.xcuserdatad/: UserInterfaceState.xcuserstate
asset/AppIcon.icon/: icon.json
linux/: CMakeLists.txt  PKGBUILD
linux/data/: ilko.desktop
linux/package/: metadata.json
linux/package/contents/config/: main.xml
linux/package/contents/ui/: config.qml  main.qml
linux/plasma-wallpaper/ilko-video/contents/ui/: config.qml  main.qml
linux/src/: CMakeLists.txt  main.cpp  resources.qrc
linux/src/core/: Application.cpp  Application.h  BatteryWatcher.cpp  DisplayManager.cpp  DisplayManager.h  GpuDetector.cpp  GpuDetector.h  NetworkWatcher.cpp  NetworkWatcher.h  ProfileManager.cpp  ProfileManager.h  StorageManager.cpp  SwitchController.cpp  SwitchController.h  WallpaperDBusService.cpp  WallpaperDBusService.h  WallpaperService.xml
linux/src/ui/: MainWindow.cpp  MainWindow.h
linux/src/wallpaper/: VideoEngine.h
linux/src/wallpaper/ilko/: metadata.json
linux/src/wallpaper/ilko/contents/config/: main.xml
linux/src/wallpaper/ilko/contents/ui/: main.qml
macos/: CloudFile.swift  ContentView.swift  DisplayManager.h  LanguageManager.swift  LiveWallpaperApp.swift  LocationWatcher.swift  Makefile  MenuBarController.swift  ProfilesView.swift  SaveSystem.mm  ThumbnailCache.swift  VideoGridView.swift  VisualEffectView.swift  WallpaperEngine.h  WallpaperEngine.mm  WallpaperViewModel.swift  custom-Info.plist.in
macos/LiveWallpaper.xcodeproj/: project.pbxproj
macos/en.lproj/: Localizable.strings
macos/zh-Hans.lproj/: Localizable.strings
releases/: v1.0.0.md  v1.0.1.md
wallpaperdaemon/: daemon.mm
windows/: Ilko.csproj  Ilko.sln  installer.iss  make_icon.ps1
windows/Converters/: Converters.cs
windows/Ilko/: App.xaml  App.xaml.cs  Ilko.csproj
windows/Ilko/Models/: MonitorInfo.cs  Profile.cs
windows/Ilko/Services/: ProfileManager.cs  SwitchController.cs  VideoWallpaperService.cs  WallpaperEngine.cs
windows/Ilko/ViewModels/: MainViewModel.cs
windows/Ilko/Views/: MainWindow.xaml  MainWindow.xaml.cs  ProfileEditorWindow.xaml  ProfileEditorWindow.xaml.cs  TrayIcon.cs  VideoWallpaperHost.xaml  VideoWallpaperHost.xaml.cs
windows/Models/: Profile.cs  WallpaperPosition.cs
windows/Services/: LocationWatcher.cs  WallpaperEngine.cs
windows/ViewModels/: MainViewModel.cs
windows/Views/: MainWindow.xaml  MainWindow.xaml.cs  ProfileEditorWindow.xaml.cs  TrayIcon.cs  VideoWallpaperHost.xaml  VideoWallpaperHost.xaml.cs
